--- a/Echonotes/res/layout/list_of_notes.xml
+++ b/Echonotes/res/layout/list_of_notes.xml
@@ -1,115 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
+    <!-- The main content view -->
+
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <!-- The main content view -->
-
-        <FrameLayout
-            android:id="@+id/content_frame"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+            <ImageButton
+                android:id="@+id/newNoteButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
+                android:layout_marginTop="10sp"
+                android:background="@null"
+                android:src="@drawable/newnote_button" />
 
-                    <ImageButton
-                        android:id="@+id/newNoteButton"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
-                        android:layout_marginTop="10sp"
-                        android:background="@null"
-                        android:src="@drawable/newnote_button" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_marginLeft="5sp"
+                android:layout_marginRight="5sp"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="10sp"
+                android:layout_height="2dp"
+                android:background="@color/main_color"/>
 
-                    <ImageView
-                        android:id="@+id/imageView1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="3sp"
-                        android:layout_marginRight="3sp"
-                        android:src="@drawable/separator_mainscreen" />
+            <ListView
+                android:id="@+id/noteListView"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0dp" >
+            </ListView>
+        </LinearLayout>
+    </FrameLayout>
 
-                    <ListView
-                        android:id="@+id/noteListView"
-                        android:layout_width="match_parent"
-                        android:layout_height="fill_parent"
-                        android:divider="@android:color/transparent"
-                        android:dividerHeight="0dp" >
-                    </ListView>
-                </LinearLayout>
-        </FrameLayout>
+    <!-- The navigation drawer -->
 
-        <!-- The navigation drawer -->
-
-   <LinearLayout
-    android:id="@+id/drawer_view"	
-    android:layout_width="240dp"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_gravity="start">
-            
-    <TextView
-        android:id="@+id/echoNotesTextView"
-        android:paddingLeft="10dip"
-        android:paddingTop="10dip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:text="YOUR ECHONOTES"
-        android:textColor="@color/main_color"
-        android:textStyle="bold"
-        />	
-        
-    <View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:paddingLeft="10dip"
-    android:background="@color/main_color"/>
-        
-    <ListView
-        android:id="@+id/buttonsListView_gui"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:choiceMode="singleChoice"
-        android:divider="@drawable/list_divider"
-		android:dividerHeight="1px"
-        android:background="#ffffff"/>
-
-    
-    <TextView
-        android:id="@+id/echoNotesTextView"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:text="MY TAGS"
-        android:textColor="@color/main_color"
-        android:textStyle="bold"
-        />
-    
-    <View
-    android:layout_width="match_parent"
-    android:paddingLeft="10dip"
-    android:layout_height="1dp"
-    android:background="@color/main_color"/>
-    
-    <ListView
-        android:id="@+id/tagsListView_gui"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/drawer_view"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:divider="@drawable/list_divider"
-        android:dividerHeight="1px"
-        android:background="#ffffff"/>
-        
-</LinearLayout>
+        android:layout_gravity="start"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/echoNotesTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:paddingLeft="10dip"
+            android:paddingTop="10dip"
+            android:text="YOUR ECHONOTES"
+            android:textColor="@color/main_color"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/main_color"
+            android:paddingLeft="10dip" />
+
+        <ListView
+            android:id="@+id/buttonsListView_gui"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:choiceMode="singleChoice"
+            android:divider="@drawable/list_divider"
+            android:dividerHeight="1px" />
+
+        <TextView
+            android:id="@+id/echoNotesTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:text="MY TAGS"
+            android:textColor="@color/main_color"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/main_color"
+            android:paddingLeft="10dip" />
+
+        <ListView
+            android:id="@+id/tagsListView_gui"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffffff"
+            android:choiceMode="singleChoice"
+            android:divider="@drawable/list_divider"
+            android:dividerHeight="1px" />
+    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
